# Galaxy-Standard

./: .gitignore  CMakeLists.txt  README.md  config.py
include/: Galaxy-Standard  argparse.hpp
include/Galaxy-Standard/: decl.hpp  factory.hpp  flag.hpp  funcmap.hpp  initializer.hpp  map.hpp  parent.hpp  shared.hpp  wrapper.hpp
include/gal/: EnumMap.hpp  Flag.hpp  Type.hpp  \  _release.hpp  decl.hpp  managed_object.hpp  managed_process.hpp  memory.hpp  new.hpp  object_index.hpp  process_index.hpp  registry.hpp  registry_object.hpp  registry_process.hpp  serializable.hpp  shared.hpp  shared00.hpp  type_info.hpp  type_registry.hpp  typedef.hpp  unique_ptr.hpp  weak_ptr.hpp
include/gal/archive/: archive.hpp  polymorphic_binary_iarchive.hpp  polymorphic_binary_oarchive.hpp
include/gal/argparse/: Arg.hpp  Args.hpp  Parser.hpp  Tag.hpp  argparse.hpp  decl.hpp
include/gal/dll/: .helper.hpp.swp  class_info.hpp  class_info_destroy.hpp  class_info_destroy_0.hpp  deleter.hpp  helper.hpp  helper_base.hpp.in  helper_info.hpp
include/gal/error/: backtrace.hpp  base.hpp  no_index.hpp
include/gal/etc/: flag.hpp  print.hpp  (+3 more)
src/Galaxy-Standard/: factory.cpp  registry.cpp  release.cpp  shared.cpp
src/gal/: VerbosityRegister.cpp  _release.cpp  managed_object.cpp  managed_process.cpp  print.cpp  registry_object.cpp  registry_process.cpp  registry_process.hpp  type_registry.cpp  verbosity_base.cpp  verbosity_register.cpp
test/: CMakeLists.txt  config.py
test/A/: config.py
test/B/: config.py
test/all/: CMakeLists.txt  main.cpp
test/factory_map/: config.py
test/map/: config.py
test/object_map/: config.py
test/registry/: config.py
test/serial/: config.py
test/smart_pointer/: config.py
test/tuple/: config.py
test/weak_ptr/: config.py
(+130 files in other folders)
